# fdua_v3

./: .env  .gitignore  README.md  pyproject.toml
notebooks/: 001_pdf_to_md.ipynb  002_create_answers.ipynb
src/dataset/: postprocess.py  preprocess.py
src/model/: retriever.py
src/tools/: create_docs.py  text_extract.py
